@@ -1,3 +1,8 @@
+Wed Dec 11 10:01:26 CET 2002 Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed double free in SKE library error hadling when signature
+	  error occurred.  Affected file lib/silcske/silcske.c.
+
 Tue Dec 10 21:47:56 EET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed double free in invite list adding code when adding
